--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Flask-Migrate==1.2.0
+Flask-OpenID==1.2.4
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Flask-Testing==0.4.2
@@ -10,6 +11,8 @@ SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 alembic==0.6.7
 itsdangerous==0.24
+mock==1.0.1
 nose==1.3.4
 psycopg2==2.5.4
+python-openid==2.2.5
 wsgiref==0.1.2
